RESOLVED FIXED59489
[chromium] Fix memory leak in DRT due to OwnPtr<T*>
https://bugs.webkit.org/show_bug.cgi?id=59489
Summary [chromium] Fix memory leak in DRT due to OwnPtr<T*>
Adrienne Walker
Reported 2011-04-26 14:00:32 PDT
[chromium] Fix memory leak in DRT due to OwnPtr<T*>
Attachments
Patch (1.31 KB, patch)
2011-04-26 14:00 PDT, Adrienne Walker
tkent: review+
Adrienne Walker
Comment 1 2011-04-26 14:00:48 PDT
Kent Tamura
Comment 2 2011-04-26 15:42:06 PDT
Comment on attachment 91152 [details] Patch ok
Adrienne Walker
Comment 3 2011-04-26 16:18:31 PDT
Note You need to log in before you can comment on or make changes to this bug.