2011-04-26  Adrienne Walker  <enne@google.com>

Reviewed by Kent Tamura.

        [chromium] Fix memory leak in DRT due to OwnPtr<T*>
        https://bugs.webkit.org/show_bug.cgi?id=59489

        * DumpRenderTree/chromium/WebViewHost.h:

Canonical link: https://commits.webkit.org/74695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84973 268f45cc-cd09-0410-ab3c-d52691b4dbfc